--- a/views/one_customer.erb
+++ b/views/one_customer.erb
@@ -30,11 +30,10 @@
         <section class="py-5 text-center container">
             <div class="row py-lg-5">
                 <div class="col-lg-6 col-md-8 mx-auto">
-                    <h1 class="fw-light">Lista de Clientes</h1>
-                    <p class="lead text-muted">Clientes.</p>
+                    <h1 class="fw-light">Cliente <%= @oneCustomer.CustomerID %></h1>
                     <p>
-                        <a href="#" class="btn btn-primary my-2">Lista de Compras</a>
-                        <a href="#" class="btn btn-secondary my-2">Lista de Produtos</a>
+                        <a href="#" class="btn btn-primary my-2">Lista de Produtos</a>
+                        <a href="#" class="btn btn-secondary my-2">Lista de Clientes</a>
                     </p>
                 </div>
             </div>
@@ -43,23 +42,27 @@
         <div class="album py-5 bg-light">
             <div class="container">
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-                    <% @allCustomers.each do |customer| %>
                     <div class="col">
                     <!-- start here -->
                         <div class="card shadow-sm">
-                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title><%= customer.ContactName %></title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em"><%= customer.ContactName %></text></svg>
+                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title><%= @oneCustomer.CustomerID %></title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Numero do cliente: <%= @oneCustomer.CustomerID %></text></svg>
                             <div class="card-body">
+                                <p class="card-text">Nome do Cliente: <%= @oneCustomer.ContactName %></p>
+                                <p class="card-text">Telefone: <%= @oneCustomer.Phone %></p>
+                                <p class="card-text">Empresa: <%= @oneCustomer.CompanyName %></p>
+                                <p class="card-text">Cidade: <%= @oneCustomer.City %></p>
+                                <p class="card-text">CEP: <%= @oneCustomer.PostalCode %></p>
+                                <p class="card-text">País: <%= @oneCustomer.Country %></p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <form action="/customers/<%= customer.CustomerID %>">
-                                            <button type="submit" class="btn btn-sm btn-outline-secondary">View</button>
+                                        <form action="/customers/<%= @oneCustomer.CustomerID %>/edit">
+                                            <button type="submit" class="btn btn-sm btn-outline-secondary">Edit</button>
                                         </form>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <% end %>
                 </div>
             </div>
         </div>
