--- a/views/one_order.erb
+++ b/views/one_order.erb
@@ -54,8 +54,12 @@
                                     <p class="card-text">Unidade: <%= product.QuantityPerUnit %></p>
                                     <div class="d-flex justify-content-between align-items-center">
                                         <div class="btn-group">
-                                            <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                            <button type="button" class="btn btn-sm btn-outline-secondary">Buy</button>
+                                            <form action="/products/<%= product.ProductID %>">
+                                                <button type="submit" class="btn btn-sm btn-outline-secondary">View</button>
+                                            </form>
+                                            <form action="/buyer/<%= product.ProductID %>"> <!-- ## TODO Add Route -->
+                                                <button type="submit" class="btn btn-sm btn-outline-secondary">Buy</button>
+                                            </form>
                                         </div>
                                     </div>
                                 </div>
