Added Products, Orders and Customers controllers.

--- a/public/views/one_product.erb
+++ b/public/views/one_product.erb
@@ -30,10 +30,9 @@
         <section class="py-5 text-center container">
             <div class="row py-lg-5">
                 <div class="col-lg-6 col-md-8 mx-auto">
-                    <h1 class="fw-light">Lista de Produtos</h1>
-                    <p class="lead text-muted">Produtos hu3hu3BRBR.</p>
+                    <h1 class="fw-light">Produto <%= @oneProduct.ProductID %></h1>
                     <p>
-                        <a href="#" class="btn btn-primary my-2">Lista de Compras</a>
+                        <a href="#" class="btn btn-primary my-2">Lista de Produtos</a>
                         <a href="#" class="btn btn-secondary my-2">Lista de Clientes</a>
                     </p>
                 </div>
@@ -43,24 +42,26 @@
         <div class="album py-5 bg-light">
             <div class="container">
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-                    <% @allProducts.each do |product| %>
                     <div class="col">
                     <!-- start here -->
                         <div class="card shadow-sm">
-                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title><%= product.ProductName %></title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em"><%= product.ProductName %></text></svg>
+                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title><%= @oneProduct.ProductID %></title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Numero do Produto: <%= @oneProduct.ProductID %></text></svg>
                             <div class="card-body">
-                                <p class="card-text">Preço: R$ <%= product.UnitPrice.to_f %></p>
-                                <!-- <p class="card-text"><%= product.to_json %></p> -->
+                                <p class="card-text">Nome do Produto: <%= @oneProduct.ProductName %></p>
+                                <p class="card-text">Valor: R$ <%= @oneProduct.UnitPrice.to_f %></p>
+                                <p class="card-text">Unidade: <%= @oneProduct.QuantityPerUnit %></p>
+                                <p class="card-text">QTD em Estoque: <%= @oneProduct.UnitsInStock %></p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Buy</button>
+                                        <!-- ## TODO Add Route -->
+                                        <!-- <form action=""> -->
+                                            <!-- <button type="submit" class="btn btn-sm btn-outline-secondary">Buy</button> -->
+                                        <!-- </form> -->
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <% end %>
                 </div>
             </div>
         </div>
