--- a/public/views/all_customers.erb
+++ b/public/views/all_customers.erb
@@ -31,7 +31,7 @@
             <div class="row py-lg-5">
                 <div class="col-lg-6 col-md-8 mx-auto">
                     <h1 class="fw-light">Lista de Clientes</h1>
-                    <p class="lead text-muted">Clientes hu3hu3BRBR.</p>
+                    <p class="lead text-muted">Clientes.</p>
                     <p>
                         <a href="#" class="btn btn-primary my-2">Lista de Compras</a>
                         <a href="#" class="btn btn-secondary my-2">Lista de Produtos</a>
@@ -47,14 +47,13 @@
                     <div class="col">
                     <!-- start here -->
                         <div class="card shadow-sm">
-                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title><%= customer.contactName %><</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em"><%= customer.contactName %></text></svg>
+                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title><%= customer.ContactName %></title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em"><%= customer.ContactName %></text></svg>
                             <div class="card-body">
-                                <!-- <p class="card-text">Preço: R$ <%= customer.unitPrice %></p> -->
-                                <!-- <p class="card-text"><%= product.to_json %></p> -->
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                        <!-- <button type="button" class="btn btn-sm btn-outline-secondary">Buy</button> -->
+                                        <form action="/customers/<%= customer.CustomerID %>">
+                                            <button type="submit" class="btn btn-sm btn-outline-secondary">View</button>
+                                        </form>
                                     </div>
                                 </div>
                             </div>
