--- a/public/views/all_orders.erb
+++ b/public/views/all_orders.erb
@@ -30,10 +30,10 @@
         <section class="py-5 text-center container">
             <div class="row py-lg-5">
                 <div class="col-lg-6 col-md-8 mx-auto">
-                    <h1 class="fw-light">Lista de Produtos</h1>
-                    <p class="lead text-muted">Produtos hu3hu3BRBR.</p>
+                    <h1 class="fw-light">Lista de Pedidos</h1>
+                    <p class="lead text-muted">Pedidos hu3hu3BRBR.</p>
                     <p>
-                        <a href="#" class="btn btn-primary my-2">Lista de Compras</a>
+                        <a href="#" class="btn btn-primary my-2">Lista de Produtos</a>
                         <a href="#" class="btn btn-secondary my-2">Lista de Clientes</a>
                     </p>
                 </div>
@@ -43,18 +43,23 @@
         <div class="album py-5 bg-light">
             <div class="container">
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-                    <% @allProducts.each do |product| %>
+                    <% @allOrders.each do |order| %>
                     <div class="col">
                     <!-- start here -->
                         <div class="card shadow-sm">
-                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title><%= product.ProductName %></title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em"><%= product.ProductName %></text></svg>
+                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title><%= order.OrderID %></title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Numero Pedido: <a href="/orders/<%= order.OrderID %>"><%= order.OrderID %></text></svg>
                             <div class="card-body">
-                                <p class="card-text">Preço: R$ <%= product.UnitPrice.to_f %></p>
-                                <!-- <p class="card-text"><%= product.to_json %></p> -->
+                                <p class="card-text">ID do Cliente: <a href="/customers/<%= order.CustomerID %>"><%= order.CustomerID %></a></p><br>
+                                <p class="card-text">Produtos:</p>
+                                <% order.ProductList.each do |product| %>
+                                    <p class="card-text">&emsp;&emsp;<%= product.ProductName %> (R$ <%= product.UnitPrice.to_f %>)</p>
+                                <% end %>
+                                <!-- <p class="card-text">Total:</p><br> -->
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Buy</button>
+                                        <form action="/orders/<%= order.OrderID %>">
+                                            <button type="submit" class="btn btn-sm btn-outline-secondary">View</button>
+                                        </form>
                                     </div>
                                 </div>
                             </div>
