--- a/models/views/all_orders.erb
+++ b/models/views/all_orders.erb
@@ -33,8 +33,10 @@
                     <h1 class="fw-light">Lista de Pedidos</h1>
                     <p class="lead text-muted">Pedidos hu3hu3BRBR.</p>
                     <p>
-                        <a href="#" class="btn btn-primary my-2">Lista de Produtos</a>
-                        <a href="#" class="btn btn-secondary my-2">Lista de Clientes</a>
+                        <a href="/products" class="btn btn-primary my-2">Lista de Produtos</a>
+                        <a href="/customers" class="btn btn-secondary my-2">Lista de Clientes</a>
+                        <a href="/customers/insert" class="btn btn-primary my-2">Inserir Cliente</a>
+                        <a href="/orders" class="btn btn-secondary my-2">Lista de Pedidos</a>
                     </p>
                 </div>
             </div>
