--- a/models/views/all_customers.erb
+++ b/models/views/all_customers.erb
@@ -31,10 +31,11 @@
             <div class="row py-lg-5">
                 <div class="col-lg-6 col-md-8 mx-auto">
                     <h1 class="fw-light">Lista de Clientes</h1>
-                    <p class="lead text-muted">Clientes.</p>
                     <p>
-                        <a href="#" class="btn btn-primary my-2">Lista de Compras</a>
-                        <a href="#" class="btn btn-secondary my-2">Lista de Produtos</a>
+                        <a href="/products" class="btn btn-primary my-2">Lista de Produtos</a>
+                        <a href="/customers" class="btn btn-secondary my-2">Lista de Clientes</a>
+                        <a href="/customers/insert" class="btn btn-primary my-2">Inserir Cliente</a>
+                        <a href="/orders" class="btn btn-secondary my-2">Lista de Pedidos</a>
                     </p>
                 </div>
             </div>
