--- a/models/views/all_orders.erb
+++ b/models/views/all_orders.erb
@@ -35,7 +35,7 @@
                     <p>
                         <a href="/products" class="btn btn-primary my-2">Lista de Produtos</a>
                         <a href="/customers" class="btn btn-secondary my-2">Lista de Clientes</a>
-                        <a href="/customers/insert" class="btn btn-primary my-2">Inserir Cliente</a>
+                        <a href="/insert/customers" class="btn btn-primary my-2">Inserir Cliente</a>
                         <a href="/orders" class="btn btn-secondary my-2">Lista de Pedidos</a>
                     </p>
                 </div>
