--- a/models/views/all_products.erb
+++ b/models/views/all_products.erb
@@ -35,7 +35,7 @@
                     <p>
                         <a href="/products" class="btn btn-primary my-2">Lista de Produtos</a>
                         <a href="/customers" class="btn btn-secondary my-2">Lista de Clientes</a>
-                        <a href="/customers/insert" class="btn btn-primary my-2">Inserir Cliente</a>
+                        <a href="/insert/customers" class="btn btn-primary my-2">Inserir Cliente</a>
                         <a href="/orders" class="btn btn-secondary my-2">Lista de Pedidos</a>
                     </p>
                 </div>
@@ -55,7 +55,9 @@
                                 <!-- <p class="card-text"><%= product.to_json %></p> -->
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                                        <form action="/products/<%= product.ProductID %>">
+                                            <button type="submit" class="btn btn-sm btn-outline-secondary">View</button>
+                                        </form>
                                         <button type="button" class="btn btn-sm btn-outline-secondary">Buy</button>
                                     </div>
                                 </div>
