--- a/models/views/one_customer.erb
+++ b/models/views/one_customer.erb
@@ -34,7 +34,7 @@
                     <p>
                         <a href="/products" class="btn btn-primary my-2">Lista de Produtos</a>
                         <a href="/customers" class="btn btn-secondary my-2">Lista de Clientes</a>
-                        <a href="/customers/insert" class="btn btn-primary my-2">Inserir Cliente</a>
+                        <a href="/insert/customers" class="btn btn-primary my-2">Inserir Cliente</a>
                         <a href="/orders" class="btn btn-secondary my-2">Lista de Pedidos</a>
                     </p>
                 </div>
@@ -57,8 +57,11 @@
                                 <p class="card-text">País: <%= @oneCustomer.Country %></p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <form action="/customers/<%= @oneCustomer.CustomerID %>/edit">
+                                        <form action="/edit/customers/<%= @oneCustomer.CustomerID %>">
                                             <button type="submit" class="btn btn-sm btn-outline-secondary">Edit</button>
+                                        </form>
+                                        <form action="/delete/customers/<%= @oneCustomer.CustomerID %>">
+                                            <button type="submit" class="btn btn-sm btn-outline-secondary">Delete</button>
                                         </form>
                                     </div>
                                 </div>
