--- a/public/views/one_order.erb
+++ b/public/views/one_order.erb
@@ -32,8 +32,10 @@
                 <div class="col-lg-6 col-md-8 mx-auto">
                     <h1 class="fw-light">Pedido <%= @oneOrder.first.OrderID %></h1>
                     <p>
-                        <a href="#" class="btn btn-primary my-2">Lista de Produtos</a>
-                        <a href="#" class="btn btn-secondary my-2">Lista de Clientes</a>
+                        <a href="/products" class="btn btn-primary my-2">Lista de Produtos</a>
+                        <a href="/customers" class="btn btn-secondary my-2">Lista de Clientes</a>
+                        <a href="/insert/customers" class="btn btn-primary my-2">Inserir Cliente</a>
+                        <a href="/orders" class="btn btn-secondary my-2">Lista de Pedidos</a>
                     </p>
                 </div>
             </div>
