--- a/public/views/all_products.erb
+++ b/public/views/all_products.erb
@@ -33,8 +33,10 @@
                     <h1 class="fw-light">Lista de Produtos</h1>
                     <p class="lead text-muted">Produtos hu3hu3BRBR.</p>
                     <p>
-                        <a href="#" class="btn btn-primary my-2">Lista de Compras</a>
-                        <a href="#" class="btn btn-secondary my-2">Lista de Clientes</a>
+                        <a href="/products" class="btn btn-primary my-2">Lista de Produtos</a>
+                        <a href="/customers" class="btn btn-secondary my-2">Lista de Clientes</a>
+                        <a href="/insert/customers" class="btn btn-primary my-2">Inserir Cliente</a>
+                        <a href="/orders" class="btn btn-secondary my-2">Lista de Pedidos</a>
                     </p>
                 </div>
             </div>
@@ -53,7 +55,9 @@
                                 <!-- <p class="card-text"><%= product.to_json %></p> -->
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                                        <form action="/products/<%= product.ProductID %>">
+                                            <button type="submit" class="btn btn-sm btn-outline-secondary">View</button>
+                                        </form>
                                         <button type="button" class="btn btn-sm btn-outline-secondary">Buy</button>
                                     </div>
                                 </div>
