--- a/public/views/one_customer.erb
+++ b/public/views/one_customer.erb
@@ -32,8 +32,10 @@
                 <div class="col-lg-6 col-md-8 mx-auto">
                     <h1 class="fw-light">Cliente <%= @oneCustomer.CustomerID %></h1>
                     <p>
-                        <a href="#" class="btn btn-primary my-2">Lista de Produtos</a>
-                        <a href="#" class="btn btn-secondary my-2">Lista de Clientes</a>
+                        <a href="/products" class="btn btn-primary my-2">Lista de Produtos</a>
+                        <a href="/customers" class="btn btn-secondary my-2">Lista de Clientes</a>
+                        <a href="/insert/customers" class="btn btn-primary my-2">Inserir Cliente</a>
+                        <a href="/orders" class="btn btn-secondary my-2">Lista de Pedidos</a>
                     </p>
                 </div>
             </div>
@@ -55,8 +57,11 @@
                                 <p class="card-text">País: <%= @oneCustomer.Country %></p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <form action="/customers/<%= @oneCustomer.CustomerID %>/edit">
+                                        <form action="/edit/customers/<%= @oneCustomer.CustomerID %>">
                                             <button type="submit" class="btn btn-sm btn-outline-secondary">Edit</button>
+                                        </form>
+                                        <form action="/delete/customers/<%= @oneCustomer.CustomerID %>">
+                                            <button type="submit" class="btn btn-sm btn-outline-secondary">Delete</button>
                                         </form>
                                     </div>
                                 </div>
