--- a/public/views/edit_customer.erb
+++ b/public/views/edit_customer.erb
@@ -34,8 +34,9 @@
                 <p>
                     <a href="/products" class="btn btn-primary my-2">Lista de Produtos</a>
                     <a href="/customers" class="btn btn-secondary my-2">Lista de Clientes</a>
-                    <a href="/customers/insert" class="btn btn-primary my-2">Inserir Cliente</a>
+                    <a href="/insert/customers" class="btn btn-primary my-2">Inserir Cliente</a>
                     <a href="/orders" class="btn btn-secondary my-2">Lista de Pedidos</a>
+                    <a href="/report" class="btn btn-primary my-2">Relatório de Pedidos</a>
                 </p>
             </div>
         </div>
