--- a/public/views/success_customer_delete.erb
+++ b/public/views/success_customer_delete.erb
@@ -30,7 +30,7 @@
         <section class="py-5 text-center container">
             <div class="row py-lg-5">
                 <div class="col-lg-6 col-md-8 mx-auto">
-                    <h1 class="fw-light">Sucesso ao inserir o cliente</h1>
+                    <h1 class="fw-light">Sucesso ao deletar o cliente</h1>
                     <p>
                         <a href="/products" class="btn btn-primary my-2">Lista de Produtos</a>
                         <a href="/customers" class="btn btn-secondary my-2">Lista de Clientes</a>
