--- a/public/views/all_orders.erb
+++ b/public/views/all_orders.erb
@@ -37,6 +37,7 @@
                         <a href="/customers" class="btn btn-secondary my-2">Lista de Clientes</a>
                         <a href="/insert/customers" class="btn btn-primary my-2">Inserir Cliente</a>
                         <a href="/orders" class="btn btn-secondary my-2">Lista de Pedidos</a>
+                        <a href="/report" class="btn btn-primary my-2">Relatório de Pedidos</a>
                     </p>
                 </div>
             </div>
