--- a/public/views/default_index.erb
+++ b/public/views/default_index.erb
@@ -1,5 +1,46 @@
-<html>
+<!doctype html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Northwind</title>
+        <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/album/">
+        <link href="/css/bootstrap.min.css" rel="stylesheet">
+
+        <style>
+        .bd-placeholder-img {
+            font-size: 1.125rem;
+            text-anchor: middle;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            user-select: none;
+        }
+
+        @media (min-width: 768px) {
+            .bd-placeholder-img-lg {
+            font-size: 3.5rem;
+            }
+        }
+        </style>
+    </head>
     <body>
-        <h1>BD 2</h1>
+
+    <header>
+    <main>
+        <section class="py-5 text-center container">
+            <div class="row py-lg-5">
+                <div class="col-lg-6 col-md-8 mx-auto">
+                    <h1 class="fw-light">Northwind</h1>
+                    <p>
+                        <a href="/products" class="btn btn-primary my-2">Lista de Produtos</a>
+                        <a href="/customers" class="btn btn-secondary my-2">Lista de Clientes</a>
+                        <a href="/insert/customers" class="btn btn-primary my-2">Inserir Cliente</a>
+                        <a href="/orders" class="btn btn-secondary my-2">Lista de Pedidos</a>
+                        <a href="/report" class="btn btn-primary my-2">Relatório de Pedidos</a>
+                    </p>
+                </div>
+            </div>
+        </section>
+    <script src="/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
